--- a/src/styles/_partials/_typography.scss
+++ b/src/styles/_partials/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Lora";
-  src: url("../../assets/fonts/Lora-VariableFont_wght.ttf");
+  src: url("/src/assets/fonts/Lora-VariableFont_wght.ttf");
 }
 
 @font-face {
