--- a/src/styles/_partials/_variables.scss
+++ b/src/styles/_partials/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $color1: #033495;
-$color2: #fee5e1;
-$color3: #ffb8d0;
+$color2: #ffffff;
+$color3: #bad8ff;
 $color4: #6a9cfd;
 $color5: #aee4ff;
 $color6: #ffffff;
