--- a/src/styles/_partials/_typography.scss
+++ b/src/styles/_partials/_typography.scss
@@ -23,13 +23,13 @@
 // }
 
 h1 {
-  font-family: Quattrocento;
+  font-family: Quattrocento-Bold;
   font-size: 3rem;
   line-height: 3rem;
 }
 
 h2 {
-  font-family: Quattrocento;
+  font-family: Quattrocento-Bold;
   font-size: 2rem;
   line-height: 2.5rem;
 }
@@ -42,6 +42,6 @@ h3 {
 
 p {
   font-family: Lora;
-  font-size: 1rem;
-  line-height: 1.8rem;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
 }
