--- a/src/styles/_partials/_variables.scss
+++ b/src/styles/_partials/_variables.scss
@@ -3,5 +3,5 @@ $color1: #033495;
 $color2: #ffffff;
 $color3: #bad8ff;
 $color4: #6a9cfd;
-$color5: #aee4ff;
-$color6: #ffffff;
+$color5: #b79eff;
+$color6: #000000;
