--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -3,7 +3,43 @@
 @use "../../styles/_partials/mixin" as *;
 
 .cart-page {
+  padding: 2rem;
+
+  &__title {
+    @include h1;
+    padding: 2rem 0;
+  }
   &__box {
     display: flex;
+    flex-direction: column;
+    padding: 2rem 0;
+
+    &-small {
+      display: flex;
+      margin-bottom: 2rem;
+    }
+
+    &-left {
+      padding-right: 2rem;
+    }
+  }
+
+  &__bt {
+    @include button;
+
+    &-pay {
+      margin: 2rem 0;
+    }
+  }
+
+  &__table-number-input {
+    width: 80%;
+    height: 4rem;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 0px 3px rgb(86, 86, 86);
+    @include h3;
+    font-size: 1.5rem;
+    padding: 0 1rem;
   }
 }
