--- a/src/pages/HistoryPage/HistoryPage.scss
+++ b/src/pages/HistoryPage/HistoryPage.scss
@@ -1,3 +1,12 @@
 @use "../../styles/_partials/typography" as *;
 @use "../../styles/_partials/variables" as *;
 @use "../../styles/_partials/mixin" as *;
+
+.order-history {
+  padding: 2rem;
+  &__box {
+    padding: 1rem;
+    background-color: $color3;
+    margin-bottom: 1rem;
+  }
+}
