--- a/src/pages/PaymentPage/PaymentPage.scss
+++ b/src/pages/PaymentPage/PaymentPage.scss
@@ -4,9 +4,22 @@
 
 .payment-page {
   padding: 2rem;
+
+  &__back-bt {
+    @include button;
+  }
+
   &__bt-box {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
+
+  &__price-box {
+    padding: 3rem 0;
+  }
+
+  &__pay-bt {
+    @include button;
   }
 }
