--- a/src/styles/_partials/_variables.scss
+++ b/src/styles/_partials/_variables.scss
@@ -2,7 +2,5 @@
 $color1: #033495;
 $color2: #ffffff;
 $color3: #bad8ff;
-$color4: #6a9cfd;
-$color5: #b79eff;
 $color6: #000000;
-$color7: #f9f8f3;
+$color7: #e9f4fd;
