--- a/src/components/MenuCard/MenuCard.scss
+++ b/src/components/MenuCard/MenuCard.scss
@@ -88,5 +88,9 @@
 
   &__link {
     text-decoration: underline;
+    @include p;
+    font-size: 1.5rem;
+    border: none;
+    background-color: transparent;
   }
 }
