--- a/src/components/MenuCard/MenuCard.scss
+++ b/src/components/MenuCard/MenuCard.scss
@@ -13,31 +13,32 @@
     @include p;
 
     &-active {
-      border: $color1;
+      background-color: $color1;
+      color: $color2;
     }
 
     &-scroller {
       display: flex;
       overflow-x: scroll;
-      padding: 0 0 0.5rem 0;
+      padding: 2rem 0 2rem 0;
       position: sticky;
       top: 0;
       background-color: $color7;
-      margin: 2rem -2rem 0 -2rem;
+      margin: 0rem -2rem 0 -2rem;
       box-sizing: content-box;
 
-      ::-webkit-scrollbar {
-        height: 8px;
-      }
+      // ::-webkit-scrollbar {
+      //   height: 8px;
+      // }
 
-      ::-webkit-scrollbar-thumb {
-        background: #ccc;
-        border-radius: 4px;
-      }
+      // ::-webkit-scrollbar-thumb {
+      //   background: #ccc;
+      //   border-radius: 4px;
+      // }
 
-      ::-webkit-scrollbar-track {
-        background: transparent;
-      }
+      // ::-webkit-scrollbar-track {
+      //   background: transparent;
+      // }
     }
   }
 
@@ -82,8 +83,8 @@
     padding: 1rem;
     border-style: none;
     border-radius: 20px;
-    background-color: $color1;
-    color: $color2;
+    background-color: $color3;
+    color: $color6;
   }
 
   &__link {
