--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -20,7 +20,7 @@
     justify-content: space-between;
     flex-direction: column;
     height: 100vh;
-    padding: 5rem 2rem;
+    padding: 2rem 2rem 5rem 2rem;
   }
 
   &__admin-box {
@@ -33,8 +33,11 @@
   }
 
   &__top-bt {
-    @include button;
+    @include button($bg-color: rgba($color2, 0.5), $color: $color2);
     @include h2;
+    padding: 0.3rem 0.5rem;
+
+    // background-color: rgba($color2, 0.8) !important;
   }
 
   &__middle-box {
@@ -50,7 +53,7 @@
     border: none;
     box-shadow: 0px 0px 3px rgb(86, 86, 86);
     @include h3;
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-align: center;
 
     &-label {
