--- a/src/pages/PaymentSuccessPage/PaymentSuccessPage.scss
+++ b/src/pages/PaymentSuccessPage/PaymentSuccessPage.scss
@@ -4,6 +4,24 @@
 
 .payment-success-page {
   padding: 2rem;
+  height: 100vh;
+
+  &__animetion {
+    &__box {
+      @include flex;
+    }
+
+    &-ribbon {
+      border: none;
+      position: absolute;
+      width: 100vw;
+      height: 100vh;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+    }
+  }
 
   &__box {
     @include flex;
@@ -13,6 +31,7 @@
 
   &__back-bt {
     @include button;
+    z-index: 1000 !important;
   }
 
   &__message {
