--- a/src/styles/_partials/_typography.scss
+++ b/src/styles/_partials/_typography.scss
@@ -23,19 +23,19 @@
 // }
 
 h1 {
-  font-family: Quattrocento-Bold;
+  font-family: Quattrocento;
   font-size: 2rem;
   line-height: 2rem;
 }
 
 h2 {
-  font-family: Quattrocento-Bold;
+  font-family: Quattrocento;
   font-size: 1.5rem;
   line-height: 2.5rem;
 }
 
 h3 {
-  font-family: Quattrocento-Bold;
+  font-family: Quattrocento;
   font-size: 1rem;
   line-height: 1rem;
 }
