--- a/src/components/MenuCard/MenuCard.scss
+++ b/src/components/MenuCard/MenuCard.scss
@@ -60,7 +60,12 @@
     }
 
     &-name {
-      padding: 1rem 0;
+      padding: 0 0 1rem 0;
+      @include h3-bold;
+    }
+
+    &-price {
+      padding: 0 0 0.5rem 0;
     }
   }
 
