--- a/src/styles/_partials/_variables.scss
+++ b/src/styles/_partials/_variables.scss
@@ -4,3 +4,7 @@ $color2: #ffffff;
 $color3: #bad8ff;
 $color6: #000000;
 $color7: #e9f4fd;
+
+//breakpoint
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1280px;
