--- a/src/pages/PaymentPage/PaymentPage.scss
+++ b/src/pages/PaymentPage/PaymentPage.scss
@@ -3,16 +3,37 @@
 @use "../../styles/_partials/mixin" as *;
 
 .payment-page {
+  &-box {
+    @include tablet {
+      @include flex;
+    }
+  }
   padding: 2rem;
+  @include tablet {
+    width: 1020px;
+  }
+
+  &__price {
+    @include tablet {
+      @include h1-big;
+    }
+  }
 
   &__back-bt {
     @include button;
+    @include tablet {
+      @include h3-big;
+    }
   }
 
   &__bt-box {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    @include tablet {
+      margin-top: 3rem;
+      gap: 2rem;
+    }
   }
 
   &__price-box {
@@ -20,11 +41,20 @@
 
     &-text {
       padding: 1rem 0;
+      @include tablet {
+        @include h2-big;
+      }
     }
   }
 
   &__pay-bt {
     @include button;
+
+    &-text {
+      @include tablet {
+        @include h3-big;
+      }
+    }
   }
 
   &__animation {
