--- a/src/styles/_partials/_mixin.scss
+++ b/src/styles/_partials/_mixin.scss
@@ -38,6 +38,8 @@
   border: none;
 }
 
+//Mobile📱
+
 @mixin h1 {
   font-family: Quattrocento;
   font-size: 2rem;
@@ -84,4 +86,54 @@
   font-family: Lora-Italic;
   font-size: 1rem;
   line-height: 1.2rem;
+}
+
+//Laptop 💻
+
+@mixin h1-big {
+  font-family: Quattrocento;
+  font-size: 3rem;
+  line-height: 3rem;
+}
+
+@mixin h2-big {
+  font-family: Quattrocento;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+}
+
+@mixin h3-big {
+  font-family: Quattrocento;
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+@mixin p-big {
+  font-family: Lora;
+  font-size: 1.5rem;
+  line-height: 2.2rem;
+}
+
+@mixin h1-bold-big {
+  font-family: Quattrocento-Bold;
+  font-size: 3rem;
+  line-height: 3rem;
+}
+
+@mixin h2-bold-big {
+  font-family: Quattrocento-Bold;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+}
+
+@mixin h3-bold-big {
+  font-family: Quattrocento-Bold;
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+@mixin p-italic-big {
+  font-family: Lora-Italic;
+  font-size: 2rem;
+  line-height: 2.2rem;
 }
