Add Chinese on menu page, cart page

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -82,6 +82,7 @@
     @include flex;
     @include h2;
     @include button;
+    padding: 0.5rem 0;
     width: 80%;
     color: $color6;
     text-align: center;
