--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -46,8 +46,7 @@
     @include button($bg-color: rgba($color2, 0.5), $color: $color2);
     @include h2;
     padding: 0.3rem 0.5rem;
-
-    // background-color: rgba($color2, 0.8) !important;
+    cursor: pointer;
   }
 
   &__middle-box {
@@ -64,11 +63,9 @@
     box-shadow: 0px 0px 3px rgb(86, 86, 86);
     @include h3;
     font-size: 1.2rem;
-    text-align: center;
 
     &-label {
       @include h1;
-      // color: $color2;
     }
 
     &-error {
