--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -63,6 +63,7 @@
     box-shadow: 0px 0px 3px rgb(86, 86, 86);
     @include h3;
     font-size: 1.2rem;
+    text-align: center;
 
     &-label {
       @include h1;
